--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/pkm.jpeg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/dashboard.png" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -433,7 +433,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/html.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program HTML di SoloLearn</p>
+                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program SoloLearn
+                                        <a href="https://www.sololearn.com/certificates/CC-IQPLDMD7">Introduction HTML</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -465,7 +466,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/css.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program CSS di SoloLearn</p>
+                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program SoloLearn
+                                        <a href="https://www.sololearn.com/certificates/CC-BMJBJ0RU">Introduction CSS</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -497,7 +499,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/js1.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program JavaScript di SoloLearn</p>
+                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program SoloLearn
+                                        <a href="https://www.sololearn.com/certificates/CC-XJXQKAPG">Introduction JavaScript</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -529,7 +532,8 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/js2.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program Intermediate JavaScript di SoloLearn</p>
+                                    <p class="mb-4">Sertifikat yang didapat setelah menyelesaikan rangkaian program SoloLearn
+                                        <a href="https://www.sololearn.com/certificates/CC-BBPSOJSQ">Intermediate JavaScript</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -551,7 +555,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Dokumentasi PKM</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tugas UTS</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -559,9 +563,10 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/pkm.jpeg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/dashboard.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Berikut ini adalah dokumentasi waktu Pengabdian Kepada Masyarakat                           </p>
+                                    <p class="mb-4">Berikut ini adalah Tugas UTS dari mata kuliah Pemprograman Web 1 yang bertemakan 
+                                        <a href="https://testing-puce-five-91.vercel.app/">SIM - Dashboard</a></p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
